--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
     "react-router-dom": "^6.22.3",
     "react-spinners": "^0.13.8",
     "recoil": "^0.7.7",
-    "server": "file:.."
+    "server": "file:..",
+    "vite": "^5.2.11"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -32,7 +33,6 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.11"
+    "eslint-plugin-react-refresh": "^0.4.6"
   }
 }
