--- a/client/package.json
+++ b/client/package.json
@@ -24,12 +24,12 @@
     "react-spinners": "^0.13.8",
     "recoil": "^0.7.7",
     "server": "file:..",
-    "vite": "^5.2.11"
-  },
-  "devDependencies": {
+    "vite": "^5.2.11",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react": "^4.2.1"
+  },
+  "devDependencies": {
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
